template/scss/custom-css/_styles.scss
// Add your custom CSS here.
.variations__grid--escolha_sua_capa {
    max-height: 300px;
    overflow-y: auto;
    @media(min-width: 767px) {
        .variations__option {
            img {
                width: 20%;
            }
            border: 0;
            background-color: none;
            width: 20%;
        }
    }
    @media(max-width: 767px) {
        .variations__option {
            img {
                width: 30%;
            }
            border: 0;
            background-color: none;
            width: 30%;
        }
    }
}
.variations__grid--escolha_sua_capa {
    button {
        background-color: transparent;
    }
    .variations__option--selected {
        box-shadow: none !important;
        background-color: transparent !important;
        &:hover {
            box-shadow: none !important;
            background-color: transparent !important;
        }
        img {
            border: 1px solid;
            padding: 3px; 
        }
    }
} 

.arte-capa {
    display: flex;
    flex-direction: column;
    background-color: none;
}
@media(min-width: 767px) {
    .arte-capa img {
        min-width: 79px;
    }
    .arte-capa span {
        max-width: 79px;
        height: 48px;
        text-align: center;
        font-size: 15px;
    }
}
@media(max-width: 767px) {
    .arte-capa img {
        min-width: 100px;
    }
    .arte-capa span {
        max-width: 100px;
        height: 48px;
    }
}
.product__prices, .product-card__prices {
    .prices__value::after {
        content: " valor unitário";
        color: #000;
        font-weight: 400;
    }
}
.product__customization label::after {
    content: "obrigatório inserir para finalizar compra";
    color: red
}
.minicart__aside .minicart__btn-checkout {
    display: none;
}
#checkToPay .form-check {
    text-align: right;
}
#storefront-app {
    padding-bottom: 0 !important;
}
.cart__info .cart__btn-checkout {
    display: none;
}
.form-check .form-check-label {
    text-align: start;
}
.minicart__aside .minicart__btn-cart {
    font-size: 0;
    &::after {
        content: "Finalizar Compra";
        font-size: 1rem !important;
    }
}

.apx_giftWrap{font-size:11px}
.apx_giftWrap input{
    vertical-align: middle;
    margin:0 5px 0 0;
}

.cart-item__customizations{
    left: auto!important;
    margin: 5px 0 10px 0;
    position: relative!important;
    top: auto!important;
    right: auto!important;
}
.cart-item__customizations *{
    font-size:11px!important
}

.cart__list > span,
.minicart__list > span{
    display:flex;
    flex-direction:column
}

.apx_widgets_worker-giftWrap-example {
    display: inline-block;
    background: #ccc;
    color: #fff;
    font-weight: bold;
    height: 16px;
    width: 16px;
    border-radius: 50%;
    text-align: center!important;
    margin-left: 5px;
    vertical-align: middle!important;
    font-size: 10px;
    line-height: 16px;
    position: relative;
}
.apx_widgets_worker-giftWrap-example .giftPopover {
    background: #fff;
    border: 1px solid #f2f2f2;
    border-radius: 5px;
    box-shadow: 0 0 20px rgb(0 0 0 / 5%);
    display: block;
    font-size: 0;
    line-height: normal;
    margin-left: 15px;
    opacity: 0;
    padding: 5px!important;
    pointer-events: none;
    position: absolute;
    left: auto;
    bottom: calc(100% + 15px);
    right: -15px;
}
.apx_widgets_worker-giftWrap-example .giftPopover:before {
    border-left: 12px solid transparent;
    border-top: 12px solid #f2f2f2;
    border-right: 12px solid transparent;
    content: "";
    position: absolute;
    top: 100%;
    right: 10px;
}
.apx_widgets_worker-giftWrap-example .giftPopover:after {
    border-left: 10px solid transparent;
    border-top: 10px solid #fff;
    border-right: 10px solid transparent;
    content: "";
    position: absolute;
    top: 100%;
    right: 12px;
}
.apx_widgets_worker-giftWrap-example:hover .giftPopover img{max-width:100px;max-height:100px}
.apx_widgets_worker-giftWrap-example:hover .giftPopover {
    opacity: 1;
    transition: opacity .3s;
}

